--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 # track this file .gitignore (i.e. do NOT ignore it)
 !.gitignore
+!.gitpod.yml
+!.devcontainer
 !.github
 !.vscode
 php_errorlog
@@ -53,15 +55,14 @@ Thumbs.db
 # ignore node/grunt dependency directories
 node_modules/
 
-public/
-
 # ignore the dist directory were our bundle files are going to be
+public/*
+!public/index.html
+
+dist/*
+!dist/index.html
+
 !.gitkeep
-!.devcontainer
-!.devcontainer/*
-!.gitpod.yml
 !.htaccess
 !.eslintrc
-!.env.example
 .now
-.vercel
