--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,12 +1,13 @@
 ports:
-    - port: 3000
-      onOpen: open-browser
+  - port: 8080
+    onOpen: open-preview
+    visibility: public
+
 tasks:
-    - init: >
-        npm install &&
-        cp .env.example .env
-      command: >
-        python docs/assets/greeting.py
+  - before: nvm install 16
+    init: npm install
+    command: npm run start
+
 
 vscode:
   extensions:
