--- a/package.json
+++ b/package.json
@@ -1,30 +1,17 @@
 {
-	"name": "react-hello-webapp",
+	"name": "react-hello",
+	"version": "1.0.1",
 	"engines": {
 		"node": "16.x"
 	},
-	"version": "1.0.1",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --port 3000",
-		"build": "webpack --config webpack.prod.js",
-		"deploy": "node deploy-to-github.js"
+		"start": "webpack-dev-server --mode development",
+		"build": "webpack --mode development",
+		"deploy:github": "node deploy-to-github.js"
 	},
-	"author": {
-		"name": "Alejandro Sanchez",
-		"url": "http://alesanchezr.com/"
-	},
-	"contributors": [
-		{
-			"name": "Alejandro Sanchez",
-			"url": "http://alesanchezr.com/"
-		},
-		{
-			"name": "Ignacio Cordoba",
-			"url": "http://github.com/nachovz"
-		}
-	],
+	"author": "Alejandro Sanchez",
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/cli": "^7.16.0",
@@ -39,8 +26,6 @@
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"bc-console": "0.0.2",
 		"css-loader": "^6.5.1",
-		"dotenv-webpack": "^7.0.3",
-		"envfile": "^6.17.0",
 		"error-overlay-webpack-plugin": "^1.0.0",
 		"eslint": "^8.4.0",
 		"eslint-plugin-react": "^7.27.1",
@@ -50,13 +35,11 @@
 		"html-loader": "^3.0.1",
 		"html-webpack-plugin": "^5.5.0",
 		"parse-github-url": "^1.0.2",
-		"prettier": "^2.5.1",
 		"remote-origin-url": "^2.0.0",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^4.6.0",
-		"webpack-merge": "^5.8.0"
+		"webpack-dev-server": "^4.6.0"
 	},
 	"babel": {
 		"presets": [
@@ -74,12 +57,17 @@
 		]
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.4.2",
+		"@fortawesome/free-regular-svg-icons": "^6.4.2",
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"bootstrap": "^5.3.1",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
-		"react-router-dom": "^6.4.3"
+		"react-router-dom": "^6.15.0"
 	}
 }
